# Simple-OpenGL-Image-Library

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
projects/VC6/: SOIL.dsp  SOIL.dsw
projects/VC7.1/: SOIL.sln  SOIL.vcproj
projects/VC8/: SOIL.sln  SOIL.vcproj
projects/VC9/: SOIL.sln  SOIL.vcproj
projects/codeblocks/: SOIL.depend
src/: SOIL.c  SOIL.h
